# RaumMotor

./: .gitignore  .gitmodules  LICENSE  README.md
build-system/common/: CMakeLists.txt
build-system/linux/: install-dependencies-debian.sh  install-dependencies-gentoo.sh  tests-build.sh  tests-run.sh
doc/: build-system-design.md  coding-style.md  high-level-design.md
